# CrystalEngine

./: .gitignore  CMakeLists.txt  README.md
Engine/Source/Engine/: CMakeLists.txt
Engine/Source/Engine/Private/: System.cpp
Engine/Source/Engine/Private/Asset/: AssetData.cpp  AssetRegistry.cpp
Engine/Source/Engine/Private/Engine/: AssetManager.cpp  Engine.cpp  EngineSubsystem.cpp  Font.cpp  GameInstance.cpp  GameInstanceSubsystem.cpp  Material.cpp  MaterialInstance.cpp  MaterialInterface.cpp  SamplerState.cpp  Scene.cpp  Shader.cpp  StaticMesh.cpp  Subsystem.cpp  Texture.cpp  Texture2D.cpp  TextureCube.cpp
Engine/Source/Engine/Private/GameFramework/: Actor.cpp  ActorComponent.cpp  CameraActor.cpp  CameraComponent.cpp  DirectionalLight.cpp  DirectionalLightComponent.cpp  GeometryComponent.cpp  Light.cpp  LightComponent.cpp  MeshComponent.cpp  SceneComponent.cpp  StaticMeshActor.cpp  StaticMeshComponent.cpp
Engine/Source/Engine/Private/Renderer/: RenderPipeline.cpp
Engine/Source/Engine/Public/: Engine.h
Engine/Source/Engine/Public/Asset/: AssetData.h  AssetRegistry.h
Engine/Source/Engine/Public/Engine/: AssetManager.h  Engine.h  EngineSubsystem.h  Font.h  GameInstance.h  GameInstanceSubsystem.h  Material.h  MaterialInstance.h  MaterialInterface.h  Scene.h  Shader.h  StaticMesh.h  Subsystem.h  Texture.h  Texture2D.h  TextureCube.h  TextureDefines.h
Engine/Source/Engine/Public/GameFramework/: Actor.h  ActorComponent.h  CameraActor.h  CameraComponent.h  DirectionalLight.h  DirectionalLightComponent.h  (+7 more)
Engine/Source/Engine/Tests/: CMakeLists.txt  Main.cpp
(+176 files in other folders)
